--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@
 					<li><a href="">Twiter</a></li>
 				</ul>
 				<div class="staff">
-					<div class="fellow-worker"></div>
-					<div class="fellow-worker"></div>
-					<div class="fellow-worker"></div>
-					<div class="fellow-worker"></div>
+					<a href=""><div class="fellow-worker"><p>sokina jue</p></div></a>
+					<a href=""><div class="fellow-worker"><p>sokina jue</p></div></a>
+					<a href=""><div class="fellow-worker"><p>sokina jue</p></div></a>
+					<a href=""><div class="fellow-worker"><p>sokina jue</p></div></a>
 				</div>
 			</div>			
 		</div>
 		<div class="subscription">
 				<h2>Design tips, tricks, and freebies. Delivered weekly.</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
-				<form id="Email-Address" action="" method="">
+				<form id="Email-Address" action="" method="GET">
 					<input type="text" name="email" placeholder="Email Address..." required>
 					<button type="submit">subscribe</button>
 				</form>
@@ -129,7 +129,7 @@
 		</div>
 		<div class="contacts">
 			<div class="your-contact">
-				<form id="" action="" method="">
+				<form id="" action="" method="GET">
 					<input id="Name" type="text" name="text" placeholder="Name" required>
 					<input id="Mail" type="text" name="email" placeholder="Your Mail" required>
 					<textarea id="Message" name="text" placeholder="Type your message" required></textarea>
